--- a/docs/Protocol2.bib
+++ b/docs/Protocol2.bib
@@ -11,3 +11,30 @@
   title = {An extraordinary life span estimate for the clown anemonefish Amphiprion percula},
   journal = {Journal of Fish Biology},
 }
+
+@Book{Caswell2001,
+author = {Caswell, H. }, 
+title = {Matrix population models: Construction, analysis, and interpretation}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+edition = {2nd}, 
+publisher = {Sinauer Associates}, 
+address = {Sunderland, MA}, 
+year = {2001}, 
+abstract = {}, 
+keywords = {}}
+
+@Book{Mills2007,
+author = {Mills, L. S. }, 
+title = {Conservation of Wildlife Populations: Demography, Genetics, and Management}, 
+volume = {}, 
+pages = {342}, 
+editor = {}, 
+edition = {}, 
+publisher = {Blackwell}, 
+address = {Malden, MA}, 
+year = {2007}, 
+abstract = {}, 
+keywords = {}}
+
