Protocol prebreeding example

--- a/docs/Protocol.Rmd
+++ b/docs/Protocol.Rmd
@@ -68,6 +68,7 @@ There are six possible responses, with most studies falling into the first three
 6. **Unknown**: The census type cannot be determined from the information in the publication, for reasons other than the ambiguity in the previous option.
 
 ### Examples
+- `r citet("10.1007/s00442-011-2070-5")` [, p. 100] describe their model as "a female-based, pre-breeding matrix projection model," describe their first age class as "1 year old individuals," and include in the fertility term of the matrix $\phi_{juv}$, juvenile survival, which is distinct from the parent's survival (in the second row of the matrix) given by $\phi_{ad}$. Thus, using all three criteria, the model would be classified as `Pre`.
 - `r citet("10.1577/M08-034.1")` name their first stage "age 0" (p. 1071), so this study would be classified as `Post`. They also say "We used a separate postbreeding projection matrix" (p. 1073), confirming this interpretation.
 - `r citet("10.1007/s10530-010-9786-8")` have "Larvae" as their first stage (p. 8). This in itself is somewhat ambiguous, given the short (1 month) timestep of the model. Table 2 reveals that they have survival data on both eggs and larvae, so eggs would be the newborns. However, eggs only live 3 days ($D_E$), compared with 30 days for larvae ($D_L$). Returning to Table 1, these instantaneousl survival rates are transformed into survival across the stage using formulas such as $e^{1M_L D_L}$ (for larvae). The survival of eggs is included in the fertility term ($R_A$); if eggs took a month to hatch then the model would be a prebreeding census. However, because the egg stage is so short, the first stage in the model (Larvae) are closer to zero timesteps old than one timestep old, so the model is classified as `Post+`.
 - `r citet("10.1111/j.1600-0633.2005.00084.x")` state (p. 128) "Life table analysis was undertaken using the formulae for the case of overlapping generations and birth-flow populations developed by Leslie (1945) and more recently reviewed by Caswell (2001)." Furthermore, the end of the paragraph at the top of the second column of the page gives formulas for "$S_i$" (survival) and "$E_i$" (fertility) that match those in section XXXX of Caswell (2001). Thus the study would be coded `Flow`.
@@ -87,6 +88,7 @@ Possible values include:
 6. **Unknown**: The answer cannont be determined from the information in the source publication and the database.
 
 ### Examples
+- `r citet("10.1007/s00442-011-2070-5")` [, p. 100]  include in the fertility term of the matrix $\phi_{juv}$, juvenile survival, which is distinct from the parent's survival (in the second row of the matrix) given by $\phi_{ad}$. Thus, the model would be classified as `Offspring`.
 - In @Crouse_1987, the column labeled "Fecundity" in the life table given in Table 3 is evidently maternity (its units are eggs per year). These exact maternity values have been placed in the top row of the matrix in Table 4, unmodified by survival terms. Thus the model would be classified as `None`.
 - As descrived above, `r citet("10.1007/s10530-010-9786-8")` includes egg survival in the reproductive term (see their Table 1). However, this only spans 10% of the timestep (eggs are said to hatch in 3 days; timestep is one month). Thus there is no survival term that spans the whole timestep and the model would be classified as `None`.
 - `r citet("10.1577/M08-034.1")`, in the synbolic matrix in Fig. 5c, have all three of the forms described under **Parent** above (for late juveniles, early adults, and late adults, respectively) (they use $f_i$ rather than $\phi_i$ for the maternity function). So this model would be classified as `Parent`.
