Protocol: Give section number for Caswell citation

--- a/docs/Protocol.Rmd
+++ b/docs/Protocol.Rmd
@@ -71,7 +71,7 @@ There are six possible responses, with most studies falling into the first three
 - `r citet("10.1007/s00442-011-2070-5")` [, p. 100] describe their model as "a female-based, pre-breeding matrix projection model," describe their first age class as "1 year old individuals," and include in the fertility term of the matrix $\phi_{juv}$, juvenile survival, which is distinct from the parent's survival (in the second row of the matrix) given by $\phi_{ad}$. Thus, using all three criteria, the model would be classified as `Pre`.
 - `r citet("10.1577/M08-034.1")` name their first stage "age 0" (p. 1071), so this study would be classified as `Post`. They also say "We used a separate postbreeding projection matrix" (p. 1073), confirming this interpretation.
 - `r citet("10.1007/s10530-010-9786-8")` have "Larvae" as their first stage (p. 8). This in itself is somewhat ambiguous, given the short (1 month) timestep of the model. Table 2 reveals that they have survival data on both eggs and larvae, so eggs would be the newborns. However, eggs only live 3 days ($D_E$), compared with 30 days for larvae ($D_L$). Returning to Table 1, these instantaneousl survival rates are transformed into survival across the stage using formulas such as $e^{1M_L D_L}$ (for larvae). The survival of eggs is included in the fertility term ($R_A$); if eggs took a month to hatch then the model would be a prebreeding census. However, because the egg stage is so short, the first stage in the model (Larvae) are closer to zero timesteps old than one timestep old, so the model is classified as `Post+`.
-- `r citet("10.1111/j.1600-0633.2005.00084.x")` state (p. 128) "Life table analysis was undertaken using the formulae for the case of overlapping generations and birth-flow populations developed by Leslie (1945) and more recently reviewed by Caswell (2001)." Furthermore, the end of the paragraph at the top of the second column of the page gives formulas for "$S_i$" (survival) and "$E_i$" (fertility) that match those in section XXXX of Caswell (2001). Thus the study would be coded `Flow`.
+- `r citet("10.1111/j.1600-0633.2005.00084.x")` state (p. 128) "Life table analysis was undertaken using the formulae for the case of overlapping generations and birth-flow populations developed by Leslie (1945) and more recently reviewed by Caswell (2001)." Furthermore, the end of the paragraph at the top of the second column of the page gives formulas for "$S_i$" (survival) and "$E_i$" (fertility) that match those in section 2.4.1 of Caswell (2001). Thus the study would be coded `Flow`.
 
 # Survival in reproduction
 Each transition in the F matrix should contain both a fertility (number of newborns produced by an individual of that age) and a survival (of the parent and/or the offspring, depending on the type of census). The evidence for determining which survival (if any) is included in the F matrix can come from a symbolic representation of the model (See equation X in CITATION FOR COMADRE, See equation Y in CITATION FOR COMPADRE), and/or by comparing listed values of survival and fertility (often presented in a life table) with the quantitative values of the F matrix (read from the appropriate rows of the model presented in the source, or from the F matrix in the databases).
